on travail sur le résponsive

--- a/style.css
+++ b/style.css
@@ -1,440 +1,814 @@
+/*toute la page du site*/
+header{
+   display: flex;
+   justify-content: space-between;
+   align-items: flex-end;
+   flex-wrap: wrap;
+}
 body {
    background-color: white;
    font-family: "Raleway", sans-serif;
    color: black;
-  }
+}
 p {
    font-family: "Raleway", sans-serif;
    font-size: 12px;
 }
-a {
-   color: black;
-   text-decoration: none;
-}
-a:focus,
-a:hover {
-   color: blue;
-   width: 100%;
-}
+
+h1 {
+   font-size: 26px;
+ }
+ 
 h2{
    font-size: 20px;
+   padding-left: 15px;
 }
 h3 {
    font-size: 15px;
 }
-img {
-   width: 100%;
-   max-width: 500px;
-   height: auto;
+
+.stars, .stars-populaire {
+   color: #0065fc;
+   font-size: 12px;
 }
 
 header {
    background-color: white;
    margin-top: 10px;
 }
-.logo img{
-   height: 30px;
-   width: 80px;
-}
-.navbar {
-      list-style-type: none;
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-}
-.navbar ul {
-      display: flex;
-      flex-wrap: wrap-reverse;
-      justify-content: flex-end;
-      margin-top: 10px;
-}
-.navbar li{
-      display: inline;
-      padding: 0 40px;
- }
-   .page-courante {
-      color: blue;
-      border-top: 2px blue solid;
-      padding-top: 10px;
-   }
-   a.connexion {
-      border-top: none;
-      color: #0065fc;
-      font-weight: 700;
-    }
 
-    .stars, .stars-populaire {
-      color: #0065fc;
-      font-size: 12px;
-   }
-.nav a {
-   font-size: 1.3em;
-}
-
-/*main */
-h1 {
-   padding-top: 20px;
-   font-size: 18px;
-}
-h2 {
-   padding-left: 15px;
-}
-/*button search*/
-.recherche {
+/*navigation*/
+#logo{
    display: flex;
    flex-direction: row;
-   margin-top: 15px;
-   margin-bottom: 35px;
+   width: 100%;
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;
+}
+nav{
+   width: 100%;
+}
+nav ul{
+   list-style-type: none;
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   margin-top: -54px;
+   
+}
+
+nav li a{
+   display: flex;
+justify-content: right;
+padding-right: 50px;
+}
+ 
+a.page-courante{
+    color: #0065fc;
+    border-top: 1px solid blue;
+    padding-top: 19px;
+}
+.page-activite{
+    color: black;
+    border-top: none;
+    padding-top: 16px;
+  
+}
+.connection{
+    color: blue;
+    padding-right: 40px;
+    padding-top: 12px;
+}
+
+
+/*Recherche*/
+.recherche {
+  display: flex;
+  flex-direction: row;
+  margin-top: 15px;
+  margin-bottom: 35px;
 }
 .localisation {
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   margin-left: 18px;
-   width: 60px;
-   height: 60px;
-   background-color: #f2f2f2;
-   border-radius: 12px 0 0 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 18px;
+  width: 60px;
+  height: 60px;
+  background-color: #f2f2f2;
+  border-radius: 12px 0 0 12px;
 }
 .search::placeholder {
-   color: rgb(170, 170, 170);
-   font-size: 16px;
-   font-weight: 600;
+  color: rgb(170, 170, 170);
+  font-size: 16px;
+  font-weight: 600;
 }
 button.submit {
-   border: none;
-   border-radius: 0 14px 14px 0;
-   background-color: #0065fc;
-   color: white;
-   font-weight: 700;
-   font-size: 16px;
-   padding: 17px;
-   cursor: pointer;
+  border: none;
+  border-radius: 0 14px 14px 0;
+  background-color: #0065fc;
+  color: white;
+  font-weight: 700;
+  font-size: 16px;
+  padding: 17px;
+  cursor: pointer;
 }
 
 .fa-map-marker-alt {
-   background-color: #f2f2f2;
-   padding: 5px 10px;
-   border-radius: 95px 0 0 95px;
-   padding-top: 3px;
+  background-color: #f2f2f2;
+  padding: 5px 10px;
+  border-radius: 95px 0 0 95px;
+  padding-top: 3px;
 }
 .search {
-   padding: 5px 0;
-   border: 1px solid #deebff;
-   padding-left: 10px;
+  padding: 5px 0;
+  border: 1px solid #deebff;
+  padding-left: 10px;
 }
 
 .submit {
-   padding: 5px 25px;
-   border-radius: 0 95px 95px 0;
-   border: none;
-   background: #0065fc;
-   color: white;
-   width: 112px;
+  padding: 5px 25px;
+  border-radius: 0 95px 95px 0;
+  border: none;
+  background: #0065fc;
+  color: white;
+  width: 112px;
 }
-.button-submit{
-   display: none;
+.icone-submit{
+  display: none;
 }
 /* Filtres*/
 .filtre h2{
-   font-size: 24px;
-   display: inline;
+  font-size: 24px;
+  display: inline;
 }
 
 .content {
-   display: flex;
-   flex-direction: row;
-   padding: 0;
-   justify-content: start;
+  display: flex;
+  flex-direction: row;
+  padding: 0;
+  justify-content: start;
 }
-
-.box-filtre {
+.filtre{
    display: inline-flex;
-   flex-direction: row;
-   flex-wrap: wrap;
+   padding-right: 32px;
+}
+.filtre h2{
+   padding-top: 19px;
+}
+.box-filtre {
+  display: inline-flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-top: 35px;
 }
 .filtre ul li{
-   margin-left: 25px;
- }
- .filtre ul li:hover{
-   color: blue;
-   transition-duration: 0,20s;
-   cursor: pointer;
- }
- .filtre ul li:hover .icone{
-   background: rgb(139, 240, 226);
-   transition-duration: 0,20s;
- }
+  margin-left: 25px;
+}
+.filtre ul li:hover{
+  color: blue;
+  transition-duration: 0,20s;
+  cursor: pointer;
+}
+.filtre ul li:hover .icone{
+  background: rgb(139, 240, 226);
+  transition-duration: 0,20s;
+}
 .box {
-   border: solid #f2f2f2;
-   border-radius: 45px 45px 45px 45px;
-   display: flex;
-   margin-right: 16px;
-   padding-bottom: 3px;
-   padding-top: 6px;
-   height: 30px;
-   margin-bottom: 8px;
+  border: solid #f2f2f2;
+  border-radius: 45px 45px 45px 45px;
+  display: flex;
+  margin-right: 16px;
+  padding-bottom: 3px;
+  padding-top: 6px;
+  height: 30px;
+  margin-bottom: 8px;
 }
 .box-text-icone{
-   padding-right: 12px;
-   padding-top: 2px;
-   font-weight: bold;
+  padding-right: 12px;
+  padding-top: 2px;
+  font-weight: bold;
 }
 
 .icone {
-   background-color: #d6e4f7e7;
-   color: #0065fc;
-   padding: 12px;
-   border-radius: 30px;
-   margin-top: -7px;
-   margin-right: 10px;
+  background-color: #d6e4f7e7;
+  color: #0065fc;
+  padding: 12px;
+  border-radius: 30px;
+  margin-top: -7px;
+  margin-right: 10px;
 }
 
 .info {
-   display: flex;
+  display: flex;
 }
 .info p {
-   margin-top: 26px;
+  margin-top: 26px;
 }
 .fa-info {
-   color: #0065fc;
-   font-size: 15px;
-   border: 2px solid #f2f2f2;
-   width: 20px;
-   height: 20px;
-   text-align: center;
-   padding: 5px;
-   margin: 18px;
-   border-radius: 50%;
+  color: #0065fc;
+  font-size: 15px;
+  border: 2px solid #f2f2f2;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  padding: 5px;
+  margin: 18px;
+  border-radius: 50%;
 }
 /* Container*/
 #container {
-   display: flex;
-  }
+  display: flex;
+ }
 /*container hebergement*/
 
 .container-hebergement {
+
+  background-color: #f2f2f2;
+  width: 872px;
+  border-radius: 15px 15px 15px 15px;
  
-   background-color: #f2f2f2;
-   width: 872px;
-   border-radius: 15px 15px 15px 15px;
-  
 }
 .img-hebergement a img {
-   width: 276px;
-   height: 130px;
-   object-fit: cover;
-   border-radius: 15px 15px 0 0;
+  width: 276px;
+  height: 130px;
+  object-fit: cover;
+  border-radius: 15px 15px 0 0;
 }
 
 .card {
-   background-color: white;
-   border-radius: 17px 17px 0 0;
-   border: 3px solid white;
-   margin-top: 20px;
-   padding-bottom: 10px;
-  
+  background-color: white;
+  border-radius: 17px 17px 0 0;
+  border: 3px solid white;
+  margin-top: 20px;
+  padding-bottom: 10px;
+ 
 }
 
 .card-hebergement {
-   display: flex;
-   flex-wrap: wrap;
-   justify-content: space-evenly;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 .card-text {
-   margin-left: 5px;
-   margin-top: -12px;
+  margin-left: 5px;
+  margin-top: -12px;
 }
 .text {
-   margin-left: 12px;
+  margin-left: 12px;
 }
 .text p{
-   font-weight: bold;
-   font-size: 16px;
+  font-weight: bold;
+  font-size: 16px;
+}
+/*Container Populaire*/
+
+.container-populaire {
+  background: #f2f2f2;
+  width: 350px;
+  margin-left: 20px;
+  padding-right: 20px;
+  border-radius: 15px;
+  padding-bottom: 1px;
+}
+.populaire-icone{
+  display: flex;
+  justify-content: space-between;
+}
+.populaire-icone i{
+  margin-top: 19px;
+}
+.card-populaire {
+  margin-top: 19px;
+  margin-left: 14px;
+  margin-bottom: 20px;
+  display: flex;
+  background: white;
+  border-radius: 17px;
+ }
+.populaire-img a img {
+  width: 135px;
+  height: 146px;
+  margin-left: 3px;
+  margin-top: 3px;
+  border-radius: 17px 0 0 17px;
+  object-fit: cover;
+}
+
+.card-text-populaire {
+  padding-left: 12px;
+}
+.Icon-starColor {
+  color: #f2f2f2;
+}
+
+/* Container Activite*/
+.album {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  
+}
+.container-activites {
+   padding-top: 45px;
+}
+.colonne{
+  padding-right: 12px;
+}
+
+.activite1{
+   border-radius: 15px 15px 15px 15px;
+   box-shadow: 2px 2px 9px 5px #f2f2f2;
+}
+.activite2{
+   border-radius: 15px 15px 15px 15px;
+   box-shadow: 2px 2px 9px 5px #f2f2f2;
+}
+.activite3{
+   border-radius: 15px 15px 15px 15px;
+   box-shadow: 2px 2px 9px 5px #f2f2f2;
+}
+.activite4{
+   border-radius: 15px 15px 15px 15px;
+   box-shadow: 2px 2px 9px 5px #f2f2f2;
+}
+.img1 {
+  height: 425px;
+  width: 294px;
+  object-fit: cover;
+  border-radius: 15px 15px 0 0;
+ }
+
+.img2 {
+  height: 136px;
+  width: 334px;
+  object-fit: cover;
+  border-radius: 15px 15px 0 0;
+}
+.img3 {
+  height: 105px;
+  width: 294px;
+  padding-top: 9px;
+  padding-left: 0;
+  object-fit: cover;
+  object-position: 100% 20%;
+  border-radius: 15px 15px 0 0;
+}
+.img4 {
+  width: 294px;
+  height: 137px;
+  object-fit: cover;
+  object-position: top;
+  border-radius: 15px 15px 0 0;
+}
+.img5 {
+  width: 294px;
+  height: 157px;
+  object-fit: cover;
+  object-position: top;
+  border-radius: 15px 15px 0 0;
+}
+.text-activite { 
+  margin-top: 14px;
+  background-color: white;
+  border-radius: 0 0 17px 17px;
+  padding-left: 5px;
+}
+
+/*Pied ce Page*/
+footer {
+  width: 100%;
+  background: #f2f2f2;
+  margin-top: 30px;
+}
+
+ul {
+  padding: 0;
+  list-style-type: none;
+  text-align: left;
+}
+
+.card-text-footer {
+  line-height: 2;
+}
+.info-footer {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  padding-right: 45px;
+  margin-left: 35px;
+}
+.card-footer {
+  padding-right: 120px;
+  margin-right: 80px;
+}
+
+
+/*main */
+h1 {
+  padding-top: 20px;
+  font-size: 18px;
+}
+h2 {
+  padding-left: 15px;
+}
+/*button search*/
+.recherche {
+  display: flex;
+  flex-direction: row;
+  margin-top: 15px;
+  margin-bottom: 35px;
+}
+.localisation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 18px;
+  width: 60px;
+  height: 60px;
+  background-color: #f2f2f2;
+  border-radius: 12px 0 0 12px;
+}
+.search::placeholder {
+  color: rgb(170, 170, 170);
+  font-size: 16px;
+  font-weight: 600;
+}
+button.submit {
+  border: none;
+  border-radius: 0 14px 14px 0;
+  background-color: #0065fc;
+  color: white;
+  font-weight: 700;
+  font-size: 16px;
+  padding: 17px;
+  cursor: pointer;
+}
+
+.fa-map-marker-alt {
+  background-color: #f2f2f2;
+  padding: 5px 10px;
+  border-radius: 95px 0 0 95px;
+  padding-top: 3px;
+}
+.search {
+  padding: 5px 0;
+  border: 1px solid #deebff;
+  padding-left: 10px;
+}
+
+.submit {
+  padding: 5px 25px;
+  border-radius: 0 95px 95px 0;
+  border: none;
+  background: #0065fc;
+  color: white;
+  width: 112px;
+}
+.button-submit{
+  display: none;
+}
+/* Filtres*/
+.filtre h2{
+  font-size: 24px;
+  display: inline;
+}
+
+.content {
+  display: flex;
+  flex-direction: row;
+  padding: 0;
+  justify-content: start;
+}
+
+.box-filtre {
+  display: inline-flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.filtre ul li{
+  margin-left: 25px;
+}
+.filtre ul li:hover{
+  color: blue;
+  transition-duration: 0,25s;
+  cursor: pointer;
+}
+.filtre ul li:hover .icone{
+  background: rgb(139, 240, 226);
+  transition-duration: 0,20s;
+}
+.box {
+  border: solid #f2f2f2;
+  border-radius: 45px 45px 45px 45px;
+  display: flex;
+  margin-right: 16px;
+  padding-bottom: 3px;
+  padding-top: 6px;
+  height: 30px;
+  margin-bottom: 8px;
+}
+.box-text-icone{
+  padding-right: 12px;
+  padding-top: 2px;
+  font-weight: bold;
+}
+
+.icone {
+  background-color: #d6e4f7e7;
+  color: #0065fc;
+  padding: 12px;
+  border-radius: 30px;
+  margin-top: -7px;
+  margin-right: 10px;
+}
+
+.info {
+  display: flex;
+}
+.info p {
+  margin-top: 26px;
+}
+.fa-info {
+  color: #0065fc;
+  font-size: 15px;
+  border: 2px solid #f2f2f2;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  padding: 5px;
+  margin: 18px;
+  border-radius: 50%;
+}
+/* Container*/
+#container {
+  display: flex;
+ }
+/*container hebergement*/
+
+.container-hebergement {
+
+  background-color: #f2f2f2;
+  width: 872px;
+  border-radius: 15px 15px 15px 15px;
+ 
+}
+.img-hebergement a img {
+  width: 276px;
+  height: 130px;
+  object-fit: cover;
+  border-radius: 15px 15px 0 0;
+}
+
+.card {
+  background-color: white;
+  border-radius: 17px 17px 0 0;
+  margin-top: 20px;
+  padding-bottom: 10px;
+ 
+}
+
+.card-hebergement {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.card-text {
+  margin-left: 5px;
+  margin-top: -12px;
+}
+.text {
+  margin-left: 12px;
+}
+.text p{
+  font-weight: bold;
+  font-size: 16px;
 }
 /*Partie Populaire*/
 
 .container-populaire {
-   background: #f2f2f2;
-   width: 350px;
-   margin-left: 20px;
-   padding-right: 20px;
-   border-radius: 15px;
+  background: #f2f2f2;
+  width: 350px;
+  margin-left: 20px;
+  padding-right: 20px;
+  border-radius: 15px;
+  padding-bottom: 1px;
 }
 .populaire-icone{
-   display: flex;
-   justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 .populaire-icone i{
-   margin-top: 19px;
+  margin-top: 19px;
 }
 .card-populaire {
-   margin-top: 19px;
-   margin-left: 14px;
-   margin-bottom: 20px;
-   display: flex;
-   background: white;
-   border-radius: 17px;
-  }
+  margin-top: 19px;
+  margin-left: 14px;
+  margin-bottom: 20px;
+  display: flex;
+  background: white;
+  border-radius: 17px;
+ }
 .populaire-img a img {
-   width: 135px;
-   height: 146px;
-   margin-left: 3px;
-   margin-top: 3px;
-   border-radius: 17px 0 0 17px;
-   object-fit: cover;
+  width: 135px;
+  height: 146px;
+  margin-left: 3px;
+  margin-top: 3px;
+  border-radius: 17px 0 0 17px;
+  object-fit: cover;
 }
 
 .card-text-populaire {
-   padding-left: 12px;
+  padding-left: 12px;
 }
 .Icon-starColor {
-   color: #f2f2f2;
+  color: #f2f2f2;
 }
 
 /*Activite*/
 .album {
-   display: flex;
-   flex-wrap: wrap;
-   justify-content: space-evenly;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 .container-activite {
-   padding-top: 20px;
+  padding-top: 20px;
 }
 .colonne{
-   padding-right: 12px;
+  padding-right: 12px;
 }
 
 .img1 {
-   height: 425px;
-   width: 294px;
-   object-fit: cover;
+  height: 425px;
+  width: 294px;
+  object-fit: cover;
 }
-.img-activite {
-   margin-top: 22px;
-}
+
 .img2 {
-   height: 136px;
-   width: 294px;
-   object-fit: cover;
+  height: 136px;
+  width: 294px;
+  object-fit: cover;
 }
 .img3 {
-   height: 105px;
-   width: 294px;
-   padding-left: 0;
-   object-fit: cover;
-   object-position: 100% 20%;
+  height: 105px;
+  width: 294px;
+  padding-left: 0;
+  object-fit: cover;
+  object-position: 100% 20%;
 }
 .img4 {
-   width: 294px;
-   height: 137px;
-   object-fit: cover;
-   object-position: top;
+  width: 294px;
+  height: 137px;
+  object-fit: cover;
+  object-position: top;
 }
 .img5 {
-   width: 294px;
-   height: 157px;
-   object-fit: cover;
-   object-position: top;
+  width: 294px;
+  height: 157px;
+  object-fit: cover;
+  object-position: top;
 }
-.activite3 {
-   padding-right: 0px;
+.activite1 {
+  border: 2px solid #f2f2f2;
 }
 .text-activite {
-  
-   margin-top: -5px;
-   background-color: white;
-   border-radius: 0 0 17px 17px;
-   padding-left: 5px;
+ 
+  margin-top: -5px;
+  background-color: white;
+  border-radius: 0 0 17px 17px;
+  padding-left: 5px;
 }
 
 /*footer*/
 footer {
-   width: 100%;
-   background: #f2f2f2;
-   margin-top: 30px;
+   display: flex;
+  width: 100%;
+  background: #f2f2f2;
+  margin-top: 30px;
 }
 
 ul {
-   padding: 0;
-   list-style-type: none;
-   text-align: left;
+  padding: 0;
+  list-style-type: none;
+  text-align: left;
 }
 
 .card-text-footer {
-   line-height: 2;
+  line-height: 2;
 }
 .info-footer {
-   width: 100%;
-   display: flex;
-   flex-wrap: wrap;
-   padding-right: 45px;
-   margin-left: 35px;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  padding-right: 45px;
+  margin-left: 35px;
 }
 .card-footer {
-   padding-right: 120px;
-   margin-right: 80px;
+  padding-right: 120px;
+  margin-right: 80px;
 }
 
-@media (max-width:600px) {
-   h2 {
-      width: 60%;
-      font-size: 20px;
-   }
-   
-   .navbar {
-      width: 100%;
-   }
-   .nav ul {
-      margin-top: -50px;
-      padding-right: 56px;
-   }
-   .navbar li{
-      display: inline;
-      padding-top: 22px;
+
+@media screen and (max-width: 634px) {
+    .logo{
+        margin-top: 2px;
+    }
+    
+  nav li:nth-of-type(1) {
+    padding-top: 70px;
+    margin-left: -106px;
+  }
+  nav li:nth-of-type(2) {
+    padding-top: 72px;
+    margin-left: 20px;
+  }
+  nav li:nth-of-type(3) {
+    margin-left: -90px;
+    padding-top: 18px;
+    font-weight: bolder;
+  }
+  a.page-courante{
+    color: blue;
+    border-top: none;
+    border-bottom: 1px solid blue;
+    padding-bottom: 15px;
+    margin-left: 12px;
+}
+.page-activite{
+   border-bottom: 1px solid #F2F2F2;
+    padding-bottom: 12px;   
         }
-   a.page-courante {
-      border-top: none;
-      border-bottom: 2px solid blue;
-      width: 100%S;
-       }
-   
-   li a.page-activite{
-      margin-top: 20px;
-      border-bottom: 2px solid #f2f2f2;
-      width: 100%;
-   } 
-   .submit{
-      display: none;
-   } 
-   .button-submit {
-   display: flex;
-   border: none;
-   border-radius: 0 14px 14px 0;
-   background-color: #0065fc;
-   color: white;
-   font-weight: 700;
-   font-size: 16px;
-   padding: 17px;
-   cursor: pointer;
-}
-.icone-submit{
-   margin-top: 3px;
-}
-
-#container{
-   display: flex;
-   flex-direction: column-reverse;
-}
-.container-hebergement{
-   background: none;
-   margin: 0;
-}
-
-   .card-hebergement{
-     display: flex;
-     flex-direction: column;
+    h2 {
+       width: 60%;
+       font-size: 20px;
+    }
+    
+    .navbar {
+       width: 100%;
+    }
+    .nav ul {
+       margin-top: -50px;
+       padding-right: 56px;
+    }
+    .navbar li{
+       display: inline;
+       padding-top: 22px;
+         }
+    a.page-courante {
+       border-top: none;
+       border-bottom: 2px solid blue;
+       width: 100%S;
+        }
+    
+    li a.page-activite{
+       margin-top: 20px;
+       border-bottom: 2px solid #f2f2f2;
+       width: 100%;
+    } 
+    .activite{
+      margin-top: 81px;
+    }
+    
+    .submit{
+       display: none;
+    } 
+    .icone-submit {
+    display: flex;
+    border: none;
+    border-radius: 0 14px 14px 0;
+    background-color: #0065fc;
+    color: white;
+    font-weight: 700;
+    font-size: 16px;
+    padding: 17px;
+    cursor: pointer;
+ }
+ 
+    
+ }
+ @media screen and (max-width: 892px) {
+ 
+   #container{
+      display: flex;
+      flex-direction: column-reverse;
    }
-   
-   
+   .container-populaire{
+      width: 100%;
+      padding-right: 20px;
+      margin: 0;
+      overflow: hidden;
+    }
+   .container-hebergement{
+     background-color: white;
+     overflow: hidden;
+     display: flex;
+   }
+   .img-hebergement a img{
+      width: 325px;
+      height: 134px;
+     object-fit: cover;
+     border-radius: 15px 15px 0 
+   }
+         
 }
