--- a/style.css
+++ b/style.css
@@ -20,14 +20,50 @@ ul a{
   color: #0065fc;
   font-weight: bold;  
 }
-.nav_item-hebergement{
+.nav_item.hebergement{
   color: #0065fc;
   border-top: 2px solid #0065fc;
   padding-top: 22px;
 }
-.nav_item-activite{
+.nav_item.activite{
   color: black;
 }
+@media (max-width: 750px){
+nav{
+  position: relative;
+}
+
+ul{
+flex: auto;
+text-align: center;
+margin-top: 32px;
+padding-left: 0px;
+}
+.nav_item.hebergement{
+  color: #0065fc;
+  border-top: none;
+  border-bottom: 2px solid #0065fc;
+  padding-top: 22px;
+}
+.nav_item.activite{
+  
+  border-top: none;
+  border-bottom: 2px solid #F2F2F2;
+  padding-top: 22px;
+}
+.nav_item a{
+  display: flex;
+  justify-content: center;
+  
+}
+.nav_item.inscription{
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+}
+  
+
 /*.nav_item.inscription{
 position: absolute;
 }
