--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 /*toute la page du site*/
+body{
+  margin-left: 20px; 
+  background-color: white;
+}
 li{
   list-style: none;  
 }
@@ -28,11 +32,51 @@ ul a{
 .nav_item.activite{
   color: black;
 }
-@media (max-width: 750px){
+
+/* Recherche*/
+form{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+.form_icone{
+  background-color: #f2f2f2;
+  border-radius:  15px 0 0 15px;
+  width: 50px;
+  height: 50px;
+}
+  i.icone{
+  margin-left: 19px;
+  padding-top: 17px;
+}
+input.search{
+  font-size: 16px;
+  font-weight: 900;
+  border: 1px solid #f2f2f2;
+  padding-left: 13px;
+  padding-right: 0px;
+  cursor: pointer;
+}
+button{
+  font-weight: bold;
+  border-radius: 0 15px 15px 0;
+  padding-right: 20px;
+  padding-left: 14px;
+  color: white;
+  background-color: blue;
+  border: 1px solid blue;
+}
+.button{
+  display: none;
+}
+
+
+
+
+@media (max-width: 800px){
 nav{
   position: relative;
 }
-
 ul{
 flex: auto;
 text-align: center;
@@ -46,10 +90,11 @@ padding-left: 0px;
   padding-top: 22px;
 }
 .nav_item.activite{
-  
-  border-top: none;
+   border-top: none;
   border-bottom: 2px solid #F2F2F2;
   padding-top: 22px;
+  padding-left: 74px;
+  padding-right: 56px;
 }
 .nav_item a{
   display: flex;
@@ -61,75 +106,32 @@ padding-left: 0px;
   top: 0;
   right: 0;
 }
+button{
+  display: none;
+}
+.button{
+  display: flex;
+  border-radius: 15px 15px 15px 15px;
+  background-color: blue;
+  border: 1px solid blue;
+  padding-top: 0px;
+  padding-left: 18px;
+  padding-right: 19px;
+  padding-bottom: 0px;
+  margin-left: -13px;
+  color: white;
+}
 }
   
 
-/*.nav_item.inscription{
-position: absolute;
-}
-.nav_item a:active{
-  border-bottom: 2px solid #0065fc;
-}
- 
+
  
  
 
 
 
-/*Recherche
-.recherche {
-  display: flex;
-  flex-direction: row;
-  margin-top: 15px;
-  margin-bottom: 35px;
-}
-.localisation {
-  display: flex;
-  justify-content: center
-  align-items: center;
-  margin-left: 18px;
-  width: 60px;
-  height: 60px;
-  background-color: #f2f2f2;
-  border-radius: 12px 0 0 12px;
-}
-.search::placeholder {
-  color: rgb(170, 170, 170);
-  font-size: 16px;
-  font-weight: 600;
-}
-button.submit {
-  border: none;
-  border-radius: 0 14px 14px 0;
-  background-color: #0065fc;
-  color: white;
-  font-weight: 700;
-  font-size: 16px;
-  padding: 17px;
-  cursor: pointer;
-}
-.fa-map-marker-alt {
-  background-color: #f2f2f2;
-  padding: 5px 10px;
-  border-radius: 95px 0 0 95px;
-  padding-top: 3px;
-}
-.search {
-  padding: 5px 0;
-  border: 1px solid #deebff;
-  padding-left: 10px;
-}
-.submit {
-  padding: 5px 25px;
-  border-radius: 0 95px 95px 0;
-  border: none;
-  background: #0065fc;
-  color: white;
-  width: 112px;
-}
-.icone-submit{
-  display: none;
-}
+/*Recherche*/
+
 /* Filtres
 .filtre h2{
   font-size: 24px;
@@ -178,7 +180,7 @@ button.submit {
   margin-bottom: 8px;
 }
 .box-text-icone{
-  padding-right: 12px;
+  padding-right: 15px;
   padding-top: 2px;
   font-weight: bold;
 }
@@ -186,7 +188,7 @@ button.submit {
 .icone {
   background-color: #d6e4f7e7;
   color: #0065fc;
-  padding: 12px;
+  padding: 15px;
   border-radius: 30px;
   margin-top: -7px;
   margin-right: 10px;
@@ -245,10 +247,10 @@ button.submit {
 }
 .card-text {
   margin-left: 5px;
-  margin-top: -12px;
+  margin-top: -15px;
 }
 .text {
-  margin-left: 12px;
+  margin-left: 15px;
 }
 .text p{
   font-weight: bold;
@@ -289,7 +291,7 @@ button.submit {
 }
 
 .card-text-populaire {
-  padding-left: 12px;
+  padding-left: 15px;
 }
 .Icon-starColor {
   color: #f2f2f2;
@@ -407,7 +409,7 @@ ul {
   margin-left: 35px;
 }
 .card-footer {
-  padding-right: 120px;
+  padding-right: 150px;
   margin-right: 73px;
 }
 
@@ -437,11 +439,11 @@ ul {
     border-top: none;
     border-bottom: 1px solid blue;
     padding-bottom: 15px;
-    margin-left: 12px;
+    margin-left: 15px;
 }
 .page-activite{
    border-bottom: 1px solid #F2F2F2;
-    padding-bottom: 12px;   
+    padding-bottom: 15px;   
         }
     h2 {
        width: 60%;
