--- a/style.css
+++ b/style.css
@@ -1,7 +1,21 @@
 /*toute la page du site*/
 body{
-  margin-left: 20px; 
   background-color: white;
+  font-family: Raleway;
+}
+img{
+  width: 261px;
+  height: 125px;
+}
+h1{
+  font-size: 25px;
+}
+h2{
+  font-size: 20px;
+  margin-left: 10px;
+}
+h3{
+  font-size: 15px;
 }
 li{
   list-style: none;  
@@ -12,12 +26,16 @@ i.icone{
   justify-content: center;
   }
 
+
 /* navigation*/
  nav{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+}
+.logo{
+  width: 90px;
 }
 ul{
   display: flex;
@@ -59,6 +77,7 @@ input.search{
   padding-right: 0px;
   cursor: pointer;
 }
+
 button{
   font-weight: bold;
   border-radius: 0 15px 15px 0;
@@ -75,10 +94,18 @@ button{
 /*Filtres*/
 .filtre{
   display: flex;
+  margin-top: 20px;
+}
+.filtre h2{
+  margin-top: 18px;
+
+}
+.box{
+  display: flex;
 }
 .box_filtre{
   display: flex;
-  margin-left: 032px;
+  margin-left: 17px;
   margin-top: 5px;
   padding-right: 13px;
   margin-bottom: 11px;
@@ -97,8 +124,72 @@ button{
 }
 .box_filtre p{
   padding-left: 10px;
+  font-weight: bold;
+}
+.box_filtre:hover{
+  color: blue;
+  transition-duration: 0,20s;
+  cursor: pointer;  
+}
+.box_filtre:hover .icone{
+  background: rgb(139, 240, 226);
+  transition-duration: 0,20s;
+}
+/*Information*/
+
+.info p{
+  margin-left: 23px;
+}
+.info{
+  display: flex;
+ 
+} 
+.box_info{
+  border: 1px solid #F2F2F2 ;
+  color: #0065fc;
+  margin-top: 13px;
+  width: 25px;
+  height: 25px;
+  border-radius: 100%; 
+}
+.box_info i{
+  padding-top: 6px;
+ font-size: 12px;
+}
+/*section hébergement*/
+section{
+  display: flex;
+}
+ article{
+   background-color: #F2F2F2;
+  width: 80%;
+}  
+#hebergement{
+ display: flex;
+ flex-wrap: wrap;
+ flex-direction: row;
+ justify-content: space-between;
+ margin-left: 20px;
+ margin-right: 20px;
+}
+.card-image{
+  margin-bottom: 30px;
+}
+.card-image img{
+  
+  object-fit: cover;
+  border-radius: 17px 17px 0 0;
 }
 
+/* Section populaire*/
+#populaire{
+  border: 2px solid yellow;
+}
+article2{
+  background-color: #F2F2F2;
+  width: 30%;
+  margin-left: 25px;
+}
 
 @media (max-width: 800px){
 nav{
@@ -133,6 +224,7 @@ padding-left: 0px;
   top: 0;
   right: 0;
 }
+/*recherche*/
 button{
   display: none;
 }
@@ -148,6 +240,16 @@ button{
   margin-left: -13px;
   color: white;
 }
+/*Filtres*/
+.filtre{
+  display: inline-flex;
+  flex-direction: column;
+  margin-left: 15px;
+}
+.box{
+  flex-wrap: wrap;
+  display: flex;
+}
 }
   
 
@@ -159,69 +261,7 @@ button{
 
 /*Recherche*/
 
-/* Filtres
-.filtre h2{
-  font-size: 24px;
-  display: inline;
-}
-
-.content {
-  display: flex;
-  flex-direction: row;
-  padding: 0;
-  justify-content: start;
-}
-.filtre{
-   display: inline-flex;
-   padding-right: 32px;
-}
-.filtre h2{
-   padding-top: 19px;
-}
-.box-filtre {
-  display: inline-flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  margin-top: 35px;
-}
-.filtre ul li{
-  margin-left: 25px;
-}
-.filtre ul li:hover{
-  color: blue;
-  transition-duration: 0,20s;
-  cursor: pointer;
-}
-.filtre ul li:hover .icone{
-  background: rgb(139, 240, 226);
-  transition-duration: 0,20s;
-}
-.box {
-  border: solid #f2f2f2;
-  border-radius: 45px 45px 45px 45px;
-  display: flex;
-  margin-right: 16px;
-  padding-bottom: 3px;
-  padding-top: 6px;
-  height: 30px;
-  margin-bottom: 8px;
-}
-.box-text-icone{
-  padding-right: 15px;
-  padding-top: 2px;
-  font-weight: bold;
-}
-
-.icone {
-  background-color: #d6e4f7e7;
-  color: #0065fc;
-  padding: 15px;
-  border-radius: 30px;
-  margin-top: -7px;
-  margin-right: 10px;
-}
-
-.info {
+/*.info {
   display: flex;
 }
 .info p {
